Aligning to last rest-config